--- a/res/layout/main.xml
+++ b/res/layout/main.xml
@@ -4,9 +4,9 @@
   android:layout_width="fill_parent"
   android:layout_height="fill_parent">
 
-  <com.erdfelt.android.gestures.GestureDebugView
+  <com.erdfelt.android.gestures.NavDebugView
     android:id="@+id/debug"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
-    android:layout_margin="5dip" />
+    android:layout_margin="5px" />
 </LinearLayout>
