--- a/res/layout/main_image.xml
+++ b/res/layout/main_image.xml
@@ -5,7 +5,7 @@
   android:layout_height="fill_parent">
 
   <com.erdfelt.android.gestures.NavImageView
-    android:id="@+id/image"
+    android:id="@+id/view"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:layout_margin="5px" />
